{
  "header": {
    "login": "Login",
    "register": "Register",
    "jobList": "Job List",
    "jobDetail": "Job Detail",
    "appliedJobs": "Applied Jobs",
    "profile": "Profile"
  },
  "login": {
    "title": "Welcome,",
    "subtitle": "Login in to ACME",
    "email": "Email",
    "password": "Password",
    "login": "Login",
    "doNotHaveAccount": "Don't have an account?",
    "register": "Register"
  },
  "register": {
    "title": "Welcome,",
    "subtitle": "Register to ACME",
    "email": "Email",
    "password": "Password",
    "register": "Register",
    "alreadyHaveAccount": "Already have an account?",
    "login": "Login"
  },
  "controller": {
    "emailRequiredError": "Email is required",
    "emailInvalidError": "Email must be a valid email",
    "passwordRequiredError": "Password is required",
    "passwordLengthError": "Password must be at least 6 characters",
    "nameRequiredError": "Name is required",
    "nameLengthError": "Name must be at least 2 characters",
    "surnameRequiredError": "Surname is required",
    "surnameLengthError": "Surname must be at least 2 characters",
    "phoneRequiredError": "Phone is required",
    "phoneLengthError": "Phone must be at least 10 characters",
    "addressRequiredError": "Address is required",
    "addressLengthError": "Address must be at least 2 characters",
    "cityRequiredError": "City is required",
    "cityLengthError": "City must be at least 2 characters",
    "countryRequiredError": "Country is required",
    "countryLengthError": "Country must be at least 2 characters",
    "profileImageRequiredError": "Profile Image is required",
    "profileImageInvalidError": "Profile Image must be a valid URL",
    "dateOfBirthRequiredError": "Date of Birth is required",
    "dateOfBirthLengthError": "Date of Birth must be at least 2 characters"
  },
  "tab": {
    "jobList": "Job List",
    "jobDetail": "Job Detail",
    "appliedJobs": "Applied Jobs",
    "profile": "Profile"
  },
  "jobList": {
    "welcome": "Welcome,",
    "search": "Search",
    "noJobs": "No jobs found"
  },
  "jobCard": {
    "company": "Company",
    "salary": "Salary",
    "applied": "Applied"
  },
  "appliedJobs": {
    "noJobs": "No jobs found"
  },
  "profile": {
    "personalInfo": "Personal Information",
    "name": "Name",
    "surname": "Surname",
    "profileImage": "Profile Image",
    "phone": "Phone",
    "dateOfBirth": "Date of Birth",
    "address": "Address",
    "country": "Country",
    "city": "City",
    "profileUpdate": "Profile Update",
    "updateSuccess": "Profile updated successfully",
    "language": "Language"
  },
  "dateTimePicker": {
    "confirm": "Confirm",
    "cancel": "Cancel"
  },
  "language": {
    "english": "English",
    "turkish": "Turkish"
  }
}
