...
              text={`${data?.salary} $`}
              size="sm"
              fontFamily="lightItalic"
            />
          </View>
          <Button
            text={isApplied ? "Withdraw" : "Apply"}
            onPress={() => handleApply(isApplied ? "withdraw" : "apply")}
            style={[styles.button, isApplied && styles.withdrawButton]}
            disabled={disabled}
            loading={disabled}
          />
        </View>
...
