...
          name="password"
          rules={{ required: true }}
          defaultValue=""
        />
      </View>
      <Button
        testID="authFormButton"
        loading={isPending}
        text={localizedScheme.login}
        style={styles.button}
        onPress={handleSubmit(onSubmit)}
        disabled={Object.keys(errors).length > 0 || isPending}
      />
...
