appId: com.acme.app
---
- tapOn: "Register"
- tapOn: "Email"
- "inputRandomEmail"
- "hideKeyboard"
- tapOn: "Password"
- "inputRandomNumber"
- "hideKeyboard"
- tapOn: "Register"
- tapOn:
    id: "authFormButton"
- tapOn: "Search"
- inputText: "Gerhold"
- tapOn: "Chief Research Supervisor Company Gerhold - Gulgowski Salary 22918"
- tapOn: "Apply"
- tapOn: "Applied Jobs, tab, 2 of 3"
- tapOn: "Chief Research Supervisor Company Gerhold - Gulgowski Salary 22918 Applied"
- tapOn: "Withdraw"
- tapOn: "Profile, tab, 3 of 3"
- tapOn: "Name"
- inputText: "Mert"
- "hideKeyboard"
- tapOn: "Surname"
- inputText: "Kütükçü"
- "hideKeyboard"
- tapOn: "Phone"
- inputText: 5070489107
- tapOn:
    point: "50%,42%"
- "scroll"
- tapOn: "Country"
- inputText: "Turkey"
- "hideKeyboard"
- tapOn: "City"
- inputText: "Antalya"
- "hideKeyboard"
- tapOn: "Address"
- inputText: "Konyaalti"
- "hideKeyboard"
- tapOn: "Turkish "
- tapOn: "İngilizce "
- tapOn: "Profile Update"
- tapOn:
    point: "9%,11%"
